--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@react-pdf/renderer": "^3.4.4",
+    "axios": "^1.6.8",
     "csshake": "^1.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
