--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "csshake": "^1.7.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
