--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "csshake": "^1.7.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
