feature/Crear el dato extra si el nuevo usuario decidio en aceptar en recibir informacion cuando se registro

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,11 @@ VITE_API_TOKEN=
 
 VITE_ITEM_LAB_VIEW_SET=
 
+VITE_DATOS_CLIENTE_EXTRA_LIST=
+
 VITE_COTIZACION_LAB_VIEW_SET=
+
+VITE_USERS=
 
 VITE_LAB_PRODUCTS=
 
