--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@react-pdf/renderer": "^3.4.4",
+    "agent-base": "^7.1.1",
     "axios": "^1.6.8",
+    "browserify-zlib": "^0.2.0",
     "csshake": "^1.7.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -21,12 +23,15 @@
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
+    "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.3",
+    "util": "^0.12.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
